cosmos/argocd/base/jaja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaja
spec:
  ports:
    - name: web
      port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app: jaja
